# RenderIt

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
Base/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Bone.cpp  Bone.hpp  Bounds.cpp  Bounds.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  GLMIOStream.hpp  GLStructs.hpp  GUI.cpp  Input.cpp  Input.hpp  Lights.cpp  Lights.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelGLTF.cpp  RenderIt.hpp  RenderPass.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Shadow.cpp  Shadow.hpp  Skybox.cpp  Skybox.hpp  Tools.cpp  Tools.hpp  Transform.cpp  (+2 more)
Base/Cameras/: FreeCamera.cpp  FreeCamera.hpp  OrbitCamera.cpp  OrbitCamera.hpp
Base/PostProcess/: PostProcess.hpp  PostProcessGamma.cpp  PostProcessGamma.hpp  PostProcessGeneral.cpp  PostProcessGeneral.hpp  PostProcessLuminance.cpp  PostProcessLuminance.hpp  PostProcessMSAA.cpp  PostProcessMSAA.hpp  PostProcessTone.cpp  PostProcessTone.hpp  PostProcessUI.cpp
Base/Shapes/: MeshShapes.hpp  ShapeCone.cpp  ShapeCube.cpp  ShapeCylinder.cpp  ShapePlane.cpp  ShapeSphere.cpp  ShapeTorus.cpp
Examples/: CMakeLists.txt  README.md
Examples/Animation/: README.md
Examples/Animation/shaders/: Animation.vert
Examples/Animation/src/: main.cpp
Examples/GPUGems/: CMakeLists.txt
Examples/GPUGems/Chapter1/: README.md
Examples/GPUGems/Chapter1/shaders/: wave.frag  wave.geom  wave.tesc  wave.tese  wave.vert
Examples/GPUGems/Chapter1/src/: configs.hpp  main.cpp
Examples/GPUGems/Chapter2/: README.md
Examples/GPUGems/Chapter2/shaders/: ground.frag  ground.vert
Examples/GPUGems/Chapter2/shaders/waves/: wave.frag  wave.geom  wave.tesc  wave.tese
Examples/GPUGems/Chapter2/src/: configs.hpp  main.cpp  renderer.hpp
Examples/GPUGems/Chapter5/: README.md
Examples/GPUGems/Chapter5/shaders/: noise.frag  noise.tesc  noise.tese  noise.vert
Examples/GPUGems/Chapter5/src/: configs.hpp  main.cpp
Examples/GPUGems/Chapter7/: README.md
Examples/GPUGems/Chapter7/shaders/: grass.frag  grass.geom  grass.vert  simple.frag  simple.vert
Examples/GPUGems/Chapter7/src/: main.cpp  randgen.hpp
Examples/GPUGems/Chapter8/: README.md
Examples/GPUGems/Chapter8/shaders/: Diffraction.frag  Diffraction.geom  Diffraction.vert
Examples/GPUGems/Chapter8/src/: main.cpp
Examples/HelloWorld/: README.md  main.cpp
Examples/HelloWorld/shaders/: HelloWorld.frag  basic.frag  basic.vert
Examples/HelloWorld/src/: main.cpp
Examples/Personal/: CMakeLists.txt
Examples/Personal/Animation/: README.md
Examples/Personal/Animation/shaders/: Animation.frag  Animation.vert
Examples/Personal/Animation/src/: main.cpp
Examples/Personal/HelloWorld/: README.md
Examples/Personal/HelloWorld/shaders/: HelloWorld.vert
Examples/Personal/HelloWorld/src/: main.cpp
Examples/Personal/Lights/: README.md
Examples/Personal/Lights/shaders/: Lights.frag
Examples/Personal/Lights/src/: main.cpp
Examples/Personal/MSAA/: README.md
Examples/Personal/MSAA/shaders/: Lights.frag  MSAA.frag  MSAA.vert
Examples/Personal/MSAA/src/: main.cpp  msaa.hpp
Examples/Personal/Mandelbulb/: README.md
Examples/Personal/Mandelbulb/shaders/: Mandelbulb.frag  Mandelbulb.vert
Examples/Personal/Mandelbulb/src/: configs.hpp  main.cpp
Examples/Personal/PBR/: README.md
Examples/Personal/PBR/shaders/: PBR.frag
Examples/Personal/PBR/src/: main.cpp
Examples/Personal/ParallaxMapping/: README.md
Examples/Personal/ParallaxMapping/shaders/: Parallax.frag  Parallax.vert
Examples/Personal/ParallaxMapping/src/: main.cpp
Examples/Personal/Shadow/: README.md
Examples/Personal/Shadow/shaders/: Shadow.frag
Examples/Personal/Shadow/src/: main.cpp
Examples/Personal/SimpleModel/: README.md
Examples/Personal/SimpleModel/shaders/: SimpleModel.frag  SimpleModel.vert
Examples/Personal/SimpleModel/src/: main.cpp
Examples/Personal/SimpleShapes/: README.md
Examples/Personal/SimpleShapes/shaders/: SimpleShapes.frag  SimpleShapes.vert
Examples/Personal/SimpleShapes/src/: main.cpp
Examples/Personal/Skybox/: README.md
Examples/Personal/Skybox/shaders/: Skybox.frag  Skybox.vert
Examples/Personal/Skybox/src/: main.cpp
Examples/Personal/ToneMapping/: README.md
Examples/Personal/ToneMapping/shaders/: PBR.frag
Examples/Personal/ToneMapping/src/: main.cpp
Examples/Personal/Transparency/: README.md
Examples/Personal/Transparency/shaders/: Screen.frag  Screen.vert  Transparency.Refract.frag  Transparency.frag  TransparencyRefract.frag
Examples/Personal/Transparency/src/: main.cpp  screen.hpp
Examples/SimpleModel/shaders/: SimpleModel.frag  SimpleModel.vert
Examples/SimpleModel/src/: main.cpp
